<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.todolist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.todolist.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_addnote"
            app:destination="@id/navigation_addnote" />
        <action
            android:id="@+id/action_navigation_dashboard_to_itemDetailFragment2"
            app:destination="@id/itemDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_addnote"
        android:name="com.example.todolist.ui.dashboard.AddNote"
        android:label="@string/addnote"
        tools:layout="@layout/add_note" >
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="item_id"
            android:defaultValue="-1"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_addnote_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/itemDetailFragment"
        android:name="com.example.todolist.ui.dashboard.ItemDetailFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_item_detail" >
        <argument
            android:name="item_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_itemDetailFragment_to_navigation_addnote"
            app:destination="@id/navigation_addnote" />
    </fragment>

</navigation>